@@ -29,4 +29,4 @@ def show_stats(r):
     r.decorated.formatStats()
 run_filter_script(
     lambda output:StreamToExtendedDecorator(result),
-    __doc__, show_stats, protocol_version=2)
+    __doc__, show_stats, protocol_version=2, passthrough_subunit=False)
